# groupmes

./: .baw  .dockerignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg
.github/workflows/: release.yml
docs/: index.rst
docs/releases/: backlog.rst
docs/technique/groupme/: index.rst
groupme/: __init__.py  __main__.py  __patch__.py  cli.py  horizontals.py  likelihood.py  pageselector.py  path.py
groupme/abbrev/: __init__.py  geometry.py  lists.py  parser.py  simple.py
groupme/abbreviation/: geometry.py  lists.py  parser.py  simple.py
groupme/border/: leftright.py  most.py
groupme/feature/: abbreviation.py  area.py  border.py  content.py  distance.py  figuretable.py  footer.py  hefopa.py  numbers.py  pagenumbers.py  tabletable.py  toc.py
groupme/figuretable/: __init__.py  column.py  normal.py  strategy.py
groupme/footer/: __init__.py  headnotes.py
groupme/footer/strategy/: __init__.py  common.py  fixed.py  moving.py  pages.py  plainmoving.py
groupme/footnotes/: __init__.py  highnote.py  highnotes.py  layout.py  parser.py  plain.py  utils.py
groupme/footnotes/strategy/: highnote.py  parser.py  plain.py  textraw.py
groupme/pagenumbers/: __init__.py
groupme/toc/: __init__.py  decider.py  extractor.py  group.py  lineregex.py  run.py
groupme/toc/basic/: group.py  layout.py  lineregex.py  utils.py
groupme/toc/strategy/: __init__.py  balance.py  geometry.py  georegex.py  pagetop.py  regex.py  utils.py
groupme/toc/toc/: create.py
groupme/utils/: __init__.py  text_regex.py
groupmes/: __init__.py  __main__.py  cli.py  path.py
groupmes/border/: leftright.py  most.py
groupmes/feature/: area.py  border.py  content.py  distance.py  hefopa.py
tests/: __init__.py  conftest.py  test_cli.py  test_huge.py
tests/abbreviation/: test_validate.py  test_work.py
tests/area/: test_group_area.py
tests/border/: test_detection.py  test_leftright.py  test_regression.py
tests/distance/: test_distance.py
tests/figuretable/: __init__.py  test_negative.py  test_validate.py
tests/figuretable/expected/: bachelor037  bachelor063  bachelor090  bachelor111  master075
tests/fixtures/: footnotes.py  simple.py  tableofcontent.py
tests/footerheader/: extractor.py  test_common.py  test_fixed.py  test_footer.py  test_header.py  test_headnotes.py  test_judgement_strategy.py  test_moving.py  test_pages.py  test_quality.py  test_rotated.py  test_validate.py
tests/footerheader/expected/: book173  diss128hc  diss148  diss171  diss171hc  hcdiss148
tests/footnotes/: conftest.py  fixtures.py  test_footnote.py  test_highnotes.py  test_negative.py  test_utils.py  test_validate.py
tests/footnotes/expected/: bachelor028  bachelor032  bachelor037  bachelor041a  bachelor063  bachelor077  bachelor078  bachelor105  bachelor106hc  bachelor111  bachelor128  diss143  diss143page20  diss171  diss172  diss178  diss273  diss406  diss480p4p5  home018  master089  master091b  master099c  master155  master193  paper014b
tests/groupme_/: __init__.py  test_cli.py  test_numbers.py
tests/groupme_/abbreviation/: test_geometry.py  test_parser.py  test_simple.py  test_validate.py  test_work.py
tests/groupme_/area/: test_group_area.py
tests/groupme_/border/: test_detection.py  test_leftright.py  test_regression.py
tests/groupme_/distance/: test_distance.py
tests/groupme_/figuretable/: __init__.py  test_negative.py  test_validate.py
tests/hefopa/: test_hefopa.py
tests/pagenumbers/: test_numbers.py  test_rotated.py  test_validate.py
tests/resources/: __init__.py
tests/tabletable/: test_validate.py
tests/toc/: test_decider.py  test_georegex.py  test_regression.py  test_strategy.py  test_toc.py  test_validate.py
(+91 files in other folders)
