[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "groupmes"
version = "0.40.5"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "iamraw>=4.91.4,<5.0.0",
    "utilo>=2.100.1,<3.0.0",
    "configos>=0.25.3,<1.0.0",
    "geostrat>=1.4.4,<2.0.0",
    "konrad>=0.10.3,<1.0.0",
    "elements>=0.21.7,<1.0.0",
    "tablero>=0.10.4,<1.0.0",
    "german>=1.28.1,<2.0.0",
    "footnote>=0.2.6,<1.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "utilotest>=1.0.1,<2.0.0",
    "hoverhoverpower==1.1.0",
    "hardcore>=0.8.1,<1.0.0",
    "genex==0.37.1",
    "genref==1.3.11",
    "rawmaker==2.40.2",
    "cleanup>=0.9.1,<1.0.0",
    "pagenumber>=0.3.4,<1.0.0",
    "footnote>=0.2.6,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/anaticulae/groupmes"
Repository = "https://github.com/anaticulae/groupmes"

[project.scripts]
groupmes = "groupmes.cli:main"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "fix",
    "perf",
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
    "deps",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "groupmes",
    "groupmes.border",
    "groupmes.feature",
]
exclude = [
    "tests*",
]
